--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-requests
-websocket-client
+# requests
+websockets
 flask
 orjson
-flask
 flask-socketio
 gunicorn
 eventlet
 psutil
 beautifulsoup4
+aiohttp
 # py-cord
