--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
     "typeAcquisition": {
         "include": [
-            "jquery"
+            "jquery",
+            "js-cookie"
         ]
     }
 }
