1. 自訂介面色彩完成。 2. 新增刷新頁面按鈕(從伺服器而非快取存取資訊)。 3. 更新dashboard.py中asyncio loop回收。 4. Web UI完結動畫列表完成。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
             "program": "${workspaceFolder}/dev_main.py",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "gevent": true,
         },
         {
             "name": "Python: Current File",
