1. 將框架改為FastAPI 2. 修正快取問題。

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Main",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/main.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+        },
+        {
             "name": "Python: Dev Main",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/dev_main.py",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "gevent": true,
         },
         {
             "name": "Python: Current File",
