e Pleasts函式例外處理Logger位置。 2. 關閉SSL驗證，避免部分電腦發生憑證錯誤。 3. 棄用websockets套件，改為aiohttp附帶之WebSocket。enter the commit message for your changes. Lines starting

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,10 @@
 aiofiles
 aiohttp
-aiosqlite
+# aiosqlite
 beautifulsoup4
 orjson
 psutil
 pydantic
 pyinstaller
-websockets
 fastapi
 uvicorn[standard]
